vhdl_syntax/src/parser/productions/snapshots/vhdl_syntax__parser__productions__signature__tests__parse_signature-2.snap
---
source: vhdl_syntax/src/parser/productions/signature.rs
expression: "to_test_text(Parser::signature, \"[]\")"
---
Signature
  LeftSquare
  RightSquare
