vhdl_syntax/src/parser/productions/snapshots/vhdl_syntax__parser__productions__signature__tests__parse_signature-3.snap
---
source: vhdl_syntax/src/parser/productions/signature.rs
expression: "to_test_text(Parser::signature, \"[return ret_t]\")"
---
Signature
  LeftSquare
  ReturnType
    Keyword(Return)
    Name
      NameDesignatorPrefix
        Identifier 'ret_t'
  RightSquare
