vhdl_syntax/src/parser/productions/snapshots/vhdl_syntax__parser__productions__signature__tests__parse_signature-5.snap
---
source: vhdl_syntax/src/parser/productions/signature.rs
expression: "to_test_text(Parser::signature, \"[arg1_t]\")"
---
Signature
  LeftSquare
  TypeMarkList
    Name
      NameDesignatorPrefix
        Identifier 'arg1_t'
  RightSquare
