vhdl_syntax/src/parser/productions/snapshots/vhdl_syntax__parser__productions__signature__tests__parse_signature.snap
---
source: vhdl_syntax/src/parser/productions/signature.rs
expression: "to_test_text(Parser::signature, \"[natural, bit return unsigned]\")"
---
Signature
  LeftSquare
  TypeMarkList
    Name
      NameDesignatorPrefix
        Identifier 'natural'
    Comma
    Name
      NameDesignatorPrefix
        Identifier 'bit'
  ReturnType
    Keyword(Return)
    Name
      NameDesignatorPrefix
        Identifier 'unsigned'
  RightSquare
